--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <div class="about-container">
                 <div class="about-card" style="order:1">
                     <div class="about-media">
-                        <img src="images/giuZuSKnruYF12ZCzpktJmHUulHKX2mSe6Z790U3.jpg" alt="" class="bride_img">
+                        <img src="images/9ddff09b-9bb6-4311-8d67-dbdfbde1d712.jpeg" alt="" class="bride_img">
                     </div>
                     <div class="about-body" data-aos="fade-up" data-aos-duration="3000">
                         <h3 class="bride_name"> Yến Nhi</h3>
@@ -516,7 +516,7 @@
                 </div>
                 <div class="about-card" style="order:1">
                     <div class="about-media">
-                        <img src="images/AJWmBd858dqBYObeUTiFx4t1aKCpyUgPTdYVjahB.jpg" alt="" class="groom_img">
+                        <img src="images/5b0502d3-ff87-4c5d-b32a-105ab972e123.jpeg" alt="" class="groom_img">
                     </div>
                     <div class="about-body" data-aos="fade-up" data-aos-duration="3000">
                         <h3 class="groom_name">Thanh Long</h3>
